--- a/app/src/main/res/layout/layout_top_park_fragment.xml
+++ b/app/src/main/res/layout/layout_top_park_fragment.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/iv_open_drawer"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_personal_center"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="20dp"
