--- a/app/src/main/res/drawable/bg_rectangle_blue.xml
+++ b/app/src/main/res/drawable/bg_rectangle_blue.xml
@@ -3,17 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 填充的颜色 -->
-    <solid android:color="@color/light_blue" />
+    <solid android:color="@color/theme_start_color" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="4dp" />
+    <corners android:radius="5dp" />
 
     <!-- padding：Button里面的文字与Button边界的间隔 -->
     <padding
-        android:left="10dp"
-        android:top="5dp"
-        android:right="10dp"
-        android:bottom="5dp"
+        android:left="8dp"
+        android:top="4dp"
+        android:right="8dp"
+        android:bottom="4dp"
         />
 
 </shape>
