--- a/app/src/main/res/layout/activity_publish_parking.xml
+++ b/app/src/main/res/layout/activity_publish_parking.xml
@@ -23,7 +23,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/bg_activity">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -35,28 +35,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-            <TextView
-                android:id="@+id/tv_publish_empty"
+            <LinearLayout
+                android:id="@+id/ll_publish_empty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="暂无车位发布"
-                android:textColor="@color/colorAccent"
-                android:textSize="24sp"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:contentDescription="default car image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_car_publish"
+                    android:layout_gravity="center_horizontal"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_publish_empty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="您还没发布车位哟 !"
+                    android:textSize="16sp"
+                    android:textColor="@color/gray"
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center_horizontal"
+                    />
+
+            </LinearLayout>
 
         </FrameLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <ImageView
+        android:id="@+id/iv_fab"
+        android:contentDescription="floatingActionButton effect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:fabSize="auto"
         android:clickable="false"
-        android:src="@android:drawable/ic_input_add"
+        android:background="@drawable/selector_bg_add_publish"
         android:layout_gravity="bottom|center"
+        android:layout_marginBottom="30dp"
         />
 
 </android.support.design.widget.CoordinatorLayout>
