--- a/app/src/main/res/layout/layout_toolbar_centertitle.xml
+++ b/app/src/main/res/layout/layout_toolbar_centertitle.xml
@@ -12,7 +12,6 @@
         android:background="@drawable/bg_theme_gradient"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        android:navigationIcon="@drawable/ic_toolbar_navigation"
         app:navigationIcon="@drawable/ic_toolbar_navigation">
 
     </android.support.v7.widget.Toolbar>
@@ -22,7 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:textColor="@color/white"
         tools:text="title" />
 
 </RelativeLayout>
