refactor(dialog in publish): update ui of publish parking

--- a/app/src/main/res/drawable/bg_dialog_publish_parking.xml
+++ b/app/src/main/res/drawable/bg_dialog_publish_parking.xml
@@ -2,11 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/theme_start_color"
-        />
+        android:color="@color/white"/>
 
     <corners
-        android:radius="5dp"
+        android:radius="5dp"/>
+
+    <size
+        android:width="320dp"
+        android:height="284dp"
         />
 
 </shape>
