--- a/app/src/main/res/layout/dialog_publish_parking.xml
+++ b/app/src/main/res/layout/dialog_publish_parking.xml
@@ -8,9 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_gravity="center_horizontal">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_gravity="center_horizontal"
+        />
 
     <View
         android:layout_width="match_parent"
