--- a/app/src/main/res/layout/item_rv_dialog_park.xml
+++ b/app/src/main/res/layout/item_rv_dialog_park.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="70dp"
+    android:layout_height="70dp"
     android:background="@drawable/bg_dialog_park"
-    android:layout_margin="6dp">
+    android:layout_margin="5dp"
+    >
 
     <TextView
         android:id="@+id/tv_parking_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        tools:text="1"
         android:textColor="@color/white"
-        android:layout_centerInParent="true"
+        android:textSize="16sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/tv_parking_id"
+        android:text="车位"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:layout_marginTop="8dp"
         />
 
 </RelativeLayout>
