--- a/app/src/main/res/layout/layout_top_park_fragment.xml
+++ b/app/src/main/res/layout/layout_top_park_fragment.xml
@@ -19,7 +19,7 @@
         android:layout_marginStart="20dp"
         android:layout_width="0dp"
         android:layout_weight="1.5"
-        android:layout_height="match_parent"
+        android:layout_height="30dp"
         android:background="@drawable/round_button_white"
         android:layout_gravity="center_vertical"
         android:layout_marginEnd="20dp"
