--- a/app/src/main/res/layout/layout_top_search.xml
+++ b/app/src/main/res/layout/layout_top_search.xml
@@ -6,6 +6,7 @@
     android:padding="8dp">
 
     <ImageView
+        android:id="@+id/iv_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_toolbar_navigation"
