--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,7 +40,7 @@
         <item name="android:textColor">#ced0d3</item>
     </style>
 
-    <style name="QhDialog.Theme" parent="android:Theme.Dialog">
+    <style name="qh.dialog.Theme" parent="android:Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
