--- a/app/src/main/res/layout/item_rv_lock.xml
+++ b/app/src/main/res/layout/item_rv_lock.xml
@@ -1,90 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="90dp"
+    android:background="@drawable/selector_item"
+    android:layout_marginTop="10dp"
+    android:orientation="horizontal"
     >
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv_lock"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardCornerRadius="4dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/selector_item">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="16dp">
-
-                <TextView
-                    android:id="@+id/tv_lock_name"
-                    tools:text="CrAM_095D28"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="8dp"/>
-
-                <TextView
-                    android:id="@+id/tv_rental_status"
-                    tools:text="已租用"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="16dp"
-                    android:textSize="16sp"
-                    />
-
-                <Button
-                    android:id="@+id/bt_modify_pwd"
-                    android:text="修改密码"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_rental_status"
-                    android:layout_alignEnd="@id/tv_rental_status"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_lock_estate_name"
-                    tools:text="今典花园"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:ellipsize="marquee"
-                    android:marqueeRepeatLimit="-1"
-                    android:layout_below="@id/tv_lock_name"
-                    android:layout_alignStart="@id/tv_lock_name"
-                    android:layout_toStartOf="@id/bt_modify_pwd"
-                    android:layout_marginTop="8dp"
-                    android:textSize="14sp"
-                    />
-
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
-
-    </FrameLayout>
 
     <ImageView
         android:id="@+id/tv_user_lock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/img_lock"
-        app:layout_anchor="@id/cv_lock"
-        app:layout_anchorGravity="start|top"
-        android:layout_gravity="start"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
         />
 
-</android.support.design.widget.CoordinatorLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/tv_user_lock">
+
+        <RelativeLayout
+            android:id="@+id/layout_item_my_parking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp">
+
+            <TextView
+                android:id="@+id/tv_lock_name"
+                tools:text="CrAM_095D28"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:textSize="16sp"
+                android:textColor="@color/major_text" />
+
+            <TextView
+                android:id="@+id/tv_rental_status"
+                android:layout_width="40dp"
+                android:layout_height="16dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/tv_lock_name"
+                android:background="@drawable/blue_rect_my_parking"
+                android:gravity="center"
+                android:textColor="@color/theme_start_color"
+                android:textSize="9sp"
+                tools:text="已租用" />
+        </RelativeLayout>
+
+
+
+        <TextView
+            android:id="@+id/tv_lock_estate_name"
+            tools:text="今典花园"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@color/minor_text"
+            android:layout_below="@id/layout_item_my_parking"
+            android:layout_marginTop="10dp"
+            android:layout_alignStart="@id/layout_item_my_parking"
+            />
+
+
+    </RelativeLayout>
+
+
+    <Button
+        android:id="@+id/bt_modify_pwd"
+        android:text="修改密码"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:background="@drawable/round_button_blue"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"
+        android:layout_centerVertical="true"
+        />
+
+
+
+
+</RelativeLayout>
