--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,8 +36,8 @@
     </style>
 
     <style name="MyTabLayoutTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">#ced0d3</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#333333</item>
     </style>
 
     <style name="qh.dialog.Theme" parent="android:Theme.Dialog">
