--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,8 +84,8 @@
                 android:textColor="@color/white"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="20dp"
+                android:paddingEnd="20dp"
+                android:paddingTop="20dp"
                 />
 
             <Button
