--- a/app/src/main/res/layout/dialog_publish_parking.xml
+++ b/app/src/main/res/layout/dialog_publish_parking.xml
@@ -1,39 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_dialog_publish_parking">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_dialog"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
+        android:text="发布车位"
+        android:textSize="16sp"
+        android:textColor="@color/major_text"
         />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center_horizontal">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_dialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
+
+    </ScrollView>
+
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="1dp"
-        android:background="@drawable/bg_separator"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="12dp"
+        android:background="@color/rv_divider"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="开始"
+            android:textColor="@color/minor_text"
+            android:textSize="16sp"
+            android:gravity="center"
+            />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="结束"
+            android:textColor="@color/minor_text"
+            android:textSize="16sp"
+            android:gravity="center"
+            />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/container_period"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="10dp"
         />
 
     <Button
         android:id="@+id/btn_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add"
-        android:textAllCaps="false"
-        android:layout_gravity="center"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="添加"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/round_button_blue"
         />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/button_bord"
+        android:layout_marginTop="15dp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_quit_publish"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="取消"
+            android:textSize="16sp"
+            android:textColor="@color/major_text"
+            android:gravity="center"
+            />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/button_bord"
+            />
+
+        <TextView
+            android:id="@+id/tv_sure_publish"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="确定"
+            android:textSize="16sp"
+            android:textColor="@color/light_red"
+            android:gravity="center"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
