--- a/app/src/main/res/layout/item_rv_dialog_park.xml
+++ b/app/src/main/res/layout/item_rv_dialog_park.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="70dp"
     android:layout_height="70dp"
-    android:background="@drawable/bg_dialog_park"
+    android:background="@drawable/bg_dialog_select_park"
     android:layout_margin="5dp"
+                android:id="@+id/ll_item_parking"
     >
 
     <TextView
@@ -19,6 +20,7 @@
         />
 
     <TextView
+        android:id="@+id/label_parking_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -26,7 +28,7 @@
         android:text="车位"
         android:textSize="12sp"
         android:textColor="@color/white"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         />
 
 </RelativeLayout>
