--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -49,10 +49,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="bottom|end"
                 android:layout_marginBottom="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="120"
+                android:text="120字以内"
                 android:textColor="@color/hint_color"
                 android:textSize="12sp" />
 
