--- a/app/src/main/res/layout/dialog_publish_parking.xml
+++ b/app/src/main/res/layout/dialog_publish_parking.xml
@@ -105,7 +105,7 @@
             android:layout_height="match_parent"
             android:text="取消"
             android:textSize="16sp"
-            android:textColor="@color/major_text"
+            android:textColor="@color/gray"
             android:gravity="center"
             />
 
@@ -122,7 +122,7 @@
             android:layout_height="match_parent"
             android:text="确定"
             android:textSize="16sp"
-            android:textColor="@color/light_red"
+            android:textColor="@color/major_text"
             android:gravity="center"
             />
 
